Update DefaultEngine.ini and Battleground.umap

--- a/TankGame_Tutorial/Config/DefaultEngine.ini
+++ b/TankGame_Tutorial/Config/DefaultEngine.ini
@@ -110,7 +110,7 @@ r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/Maps/Battleground.Battleground
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -119,12 +119,10 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Maps/Battleground.Battleground
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
-
-
